--- a/final-framework-testng/test-output/old/Sample test Suite/methods.html
+++ b/final-framework-testng/test-output/old/Sample test Suite/methods.html
@@ -1,6 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Sample test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dd9bcd">  <td>18/12/18 00:28:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginDBTest.setUpBeforeClass()[pri:0, instance:com.training.regression.tests.LoginDBTest@55f3ddb1]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="6ca8ac">  <td>19/09/24 15:05:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddProductRTTC_0082Tests.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.AddProductRTTC_0082Tests@50b494a6]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1032986144</td>   <td></td> </tr>
+<tr bgcolor="6ca8ac">  <td>19/09/24 15:05:01</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddProductRTTC_0082Tests.setUp()[pri:0, instance:com.training.sanity.tests.AddProductRTTC_0082Tests@50b494a6]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1032986144</td>   <td></td> </tr>
+<tr bgcolor="6ca8ac">  <td>19/09/24 15:05:14</td>   <td>13043</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddProductRTTC_0082Tests.addProduct()[pri:0, instance:com.training.sanity.tests.AddProductRTTC_0082Tests@50b494a6]">addProduct</td> 
+  <td>main@1032986144</td>   <td></td> </tr>
+<tr bgcolor="6ca8ac">  <td>19/09/24 15:05:26</td>   <td>24174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddProductRTTC_0082Tests.tearDown()[pri:0, instance:com.training.sanity.tests.AddProductRTTC_0082Tests@50b494a6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1032986144</td>   <td></td> </tr>
+<tr bgcolor="deb56e">  <td>19/09/24 15:05:27</td>   <td>25254</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AdminFilterRTTC22TC03Tests.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.AdminFilterRTTC22TC03Tests@3cef309d]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1032986144</td>   <td></td> </tr>
+<tr bgcolor="deb56e">  <td>19/09/24 15:05:27</td>   <td>25256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AdminFilterRTTC22TC03Tests.setUp()[pri:0, instance:com.training.sanity.tests.AdminFilterRTTC22TC03Tests@3cef309d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1032986144</td>   <td></td> </tr>
+<tr bgcolor="deb56e">  <td>19/09/24 15:05:33</td>   <td>31784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminFilterRTTC22TC03Tests.adminFilter()[pri:0, instance:com.training.sanity.tests.AdminFilterRTTC22TC03Tests@3cef309d]">adminFilter</td> 
+  <td>main@1032986144</td>   <td></td> </tr>
+<tr bgcolor="9963d8">  <td>19/09/24 15:05:39</td>   <td>37797</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PasswordMismatchRTTC_0071Tests.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.PasswordMismatchRTTC_0071Tests@32709393]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1032986144</td>   <td></td> </tr>
+<tr bgcolor="9963d8">  <td>19/09/24 15:05:39</td>   <td>37799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PasswordMismatchRTTC_0071Tests.setUp()[pri:0, instance:com.training.sanity.tests.PasswordMismatchRTTC_0071Tests@32709393]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1032986144</td>   <td></td> </tr>
+<tr bgcolor="9963d8">  <td>19/09/24 15:05:50</td>   <td>48518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PasswordMismatchRTTC_0071Tests.changePasswordMismatchTest()[pri:0, instance:com.training.sanity.tests.PasswordMismatchRTTC_0071Tests@32709393]">changePasswordMismatchTest</td> 
+  <td>main@1032986144</td>   <td></td> </tr>
+<tr bgcolor="9963d8">  <td>19/09/24 15:06:04</td>   <td>62889</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PasswordMismatchRTTC_0071Tests.tearDown()[pri:0, instance:com.training.sanity.tests.PasswordMismatchRTTC_0071Tests@32709393]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1032986144</td>   <td></td> </tr>
 </table>
