--- a/final-framework-testng/test-output/index.html
+++ b/final-framework-testng/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\ms130k\AppData\Local\Temp\testng-eclipse-188672477\testng-customsuite.xml</span>
+                    <span>C:\Users\ms130k\AppData\Local\Temp\testng-eclipse-875879327\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,22 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC_037_Tests" hash-for-method="invalidCredentials(admin, 123456)">invalidCredentials(admin, 123456)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC_037_Tests" hash-for-method="invalidCredentials(admin@123, admin@123)">invalidCredentials(admin@123, admin@123)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC_037_Tests" hash-for-method="invalidCredentials(manzoor, admin@123)">invalidCredentials(manzoor, admin@123)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC_037_Tests" hash-for-method="invalidCredentials(admin, admin)">invalidCredentials(admin, admin)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC_1007Tests" hash-for-method="changePasswordMismatchTest">changePasswordMismatchTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -135,39 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.training.sanity.tests.RTTC_037_Tests</span>
+              <span class="class-name">com.training.sanity.tests.RTTC_1007Tests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="invalidCredentials(admin, 123456)">
-                  </a> <!-- invalidCredentials(admin, 123456) -->
-                  <span class="method-name">invalidCredentials</span>
-                  <span class="parameters">(admin, 123456)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="invalidCredentials(admin@123, admin@123)">
-                  </a> <!-- invalidCredentials(admin@123, admin@123) -->
-                  <span class="method-name">invalidCredentials</span>
-                  <span class="parameters">(admin@123, admin@123)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="invalidCredentials(manzoor, admin@123)">
-                  </a> <!-- invalidCredentials(manzoor, admin@123) -->
-                  <span class="method-name">invalidCredentials</span>
-                  <span class="parameters">(manzoor, admin@123)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="invalidCredentials(admin, admin)">
-                  </a> <!-- invalidCredentials(admin, admin) -->
-                  <span class="method-name">invalidCredentials</span>
-                  <span class="parameters">(admin, admin)</span>
+                  <a name="changePasswordMismatchTest">
+                  </a> <!-- changePasswordMismatchTest -->
+                  <span class="method-name">changePasswordMismatchTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -175,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ms130k\AppData\Local\Temp\testng-eclipse-188672477\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ms130k\AppData\Local\Temp\testng-eclipse-875879327\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -184,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.training.sanity.tests.RTTC_037_Tests&quot;/&gt;
+      &lt;class name=&quot;com.training.sanity.tests.RTTC_1007Tests&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -224,28 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'invalidCredentials')
-data.setCell(0, 2, 'com.training.sanity.tests.RTTC_037_Tests')
-data.setCell(0, 3, 1517);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'invalidCredentials')
-data.setCell(1, 2, 'com.training.sanity.tests.RTTC_037_Tests')
-data.setCell(1, 3, 1346);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'invalidCredentials')
-data.setCell(2, 2, 'com.training.sanity.tests.RTTC_037_Tests')
-data.setCell(2, 3, 1038);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'invalidCredentials')
-data.setCell(3, 2, 'com.training.sanity.tests.RTTC_037_Tests')
-data.setCell(3, 3, 1023);
+data.setCell(0, 1, 'changePasswordMismatchTest')
+data.setCell(0, 2, 'com.training.sanity.tests.RTTC_1007Tests')
+data.setCell(0, 3, 14823);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -271,59 +219,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.training.sanity.tests.RTTC_037_Tests</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.training.sanity.tests.RTTC_1007Tests</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUpBeforeClass</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">62 ms</span>
+                <span class="method-start">33 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">invalidCredentials(admin, 123456)</span>
-                <span class="method-start">14384 ms</span>
+                <span class="method-name">changePasswordMismatchTest</span>
+                <span class="method-start">26681 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">15907 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">18566 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">invalidCredentials(admin, admin)</span>
-                <span class="method-start">25830 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">26870 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">29202 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">invalidCredentials(manzoor, admin@123)</span>
-                <span class="method-start">39034 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">40382 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">43026 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">invalidCredentials(admin@123, admin@123)</span>
-                <span class="method-start">51592 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">52618 ms</span>
-              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
