--- a/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
+++ b/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
@@ -1,30 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6ca8ac">  <td>19/09/25 08:13:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC_037_Tests.invalidCredentials(java.lang.String, java.lang.String)[pri:0, instance:com.training.sanity.tests.RTTC_037_Tests@50b494a6]">invalidCredentials</td> 
-  <td>main@445288316</td>   <td></td> </tr>
-<tr bgcolor="6ca8ac">  <td>19/09/25 08:13:16</td>   <td>11446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC_037_Tests.invalidCredentials(java.lang.String, java.lang.String)[pri:0, instance:com.training.sanity.tests.RTTC_037_Tests@50b494a6]">invalidCredentials</td> 
-  <td>main@445288316</td>   <td></td> </tr>
-<tr bgcolor="6ca8ac">  <td>19/09/25 08:13:29</td>   <td>24650</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC_037_Tests.invalidCredentials(java.lang.String, java.lang.String)[pri:0, instance:com.training.sanity.tests.RTTC_037_Tests@50b494a6]">invalidCredentials</td> 
-  <td>main@445288316</td>   <td></td> </tr>
-<tr bgcolor="6ca8ac">  <td>19/09/25 08:13:42</td>   <td>37208</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC_037_Tests.invalidCredentials(java.lang.String, java.lang.String)[pri:0, instance:com.training.sanity.tests.RTTC_037_Tests@50b494a6]">invalidCredentials</td> 
-  <td>main@445288316</td>   <td></td> </tr>
-<tr bgcolor="6ca8ac">  <td>19/09/25 08:12:50</td>   <td>-14322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC_037_Tests.setUp()[pri:0, instance:com.training.sanity.tests.RTTC_037_Tests@50b494a6]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@445288316</td>   <td></td> </tr>
-<tr bgcolor="6ca8ac">  <td>19/09/25 08:13:09</td>   <td>4183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC_037_Tests.setUp()[pri:0, instance:com.training.sanity.tests.RTTC_037_Tests@50b494a6]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@445288316</td>   <td></td> </tr>
-<tr bgcolor="6ca8ac">  <td>19/09/25 08:13:19</td>   <td>14818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC_037_Tests.setUp()[pri:0, instance:com.training.sanity.tests.RTTC_037_Tests@50b494a6]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@445288316</td>   <td></td> </tr>
-<tr bgcolor="6ca8ac">  <td>19/09/25 08:13:33</td>   <td>28642</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC_037_Tests.setUp()[pri:0, instance:com.training.sanity.tests.RTTC_037_Tests@50b494a6]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@445288316</td>   <td></td> </tr>
-<tr bgcolor="6ca8ac">  <td>19/09/25 08:12:50</td>   <td>-14374</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC_037_Tests.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.RTTC_037_Tests@50b494a6]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@445288316</td>   <td></td> </tr>
-<tr bgcolor="6ca8ac">  <td>19/09/25 08:13:06</td>   <td>1523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RTTC_037_Tests.tearDown()[pri:0, instance:com.training.sanity.tests.RTTC_037_Tests@50b494a6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@445288316</td>   <td></td> </tr>
-<tr bgcolor="6ca8ac">  <td>19/09/25 08:13:17</td>   <td>12487</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RTTC_037_Tests.tearDown()[pri:0, instance:com.training.sanity.tests.RTTC_037_Tests@50b494a6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@445288316</td>   <td></td> </tr>
-<tr bgcolor="6ca8ac">  <td>19/09/25 08:13:31</td>   <td>25998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RTTC_037_Tests.tearDown()[pri:0, instance:com.training.sanity.tests.RTTC_037_Tests@50b494a6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@445288316</td>   <td></td> </tr>
-<tr bgcolor="6ca8ac">  <td>19/09/25 08:13:43</td>   <td>38234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RTTC_037_Tests.tearDown()[pri:0, instance:com.training.sanity.tests.RTTC_037_Tests@50b494a6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@445288316</td>   <td></td> </tr>
+<tr bgcolor="8067a5">  <td>19/10/20 20:29:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC_1007Tests.changePasswordMismatchTest()[pri:0, instance:com.training.sanity.tests.RTTC_1007Tests@3d99d22e]">changePasswordMismatchTest</td> 
+  <td>main@1123629720</td>   <td></td> </tr>
+<tr bgcolor="8067a5">  <td>19/10/20 20:28:52</td>   <td>-26648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC_1007Tests.setUp()[pri:0, instance:com.training.sanity.tests.RTTC_1007Tests@3d99d22e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1123629720</td>   <td></td> </tr>
+<tr bgcolor="8067a5">  <td>19/10/20 20:28:52</td>   <td>-26674</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC_1007Tests.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.RTTC_1007Tests@3d99d22e]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1123629720</td>   <td></td> </tr>
 </table>
